# HDirac

./: .gitignore  .gitlab-ci.yml  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.md  index.html  install_cil.sh  mkdocs.yml  q
.github/workflows/: ci.yml
ci/: build-linux-macos.sh  test-regression.py
ci/error_rate_references/LDPC/coset/householder_od2/sequence/: n204800_r0p09765625_VC64_flooding_SPA.txt
concepts/householder-transform/: index.html
docs/: README.md  index.md
docs/concepts/: householder-transform.md
docs/getting-started/: build.md  create-bsparse.md  custom-channel.md  ldpc-codes.md
docs/simulation/: coding-schemes.md  combinations.md  modes.md  running.md
docs/stylesheets/: extra.css
getting-started/create-bsparse/: index.html
getting-started/custom-channel/: index.html
getting-started/ldpc-codes/: index.html
include/: HDirac.hpp
include/Code/: Code_params.hpp  Code_params_LDPC.hpp  Code_params_LDPC_synd_cnct.hpp
include/Module/: Alice_quantum_generator.hpp  Alice_quantum_generator.hxx  Complex_operator.hpp  Complex_operator.hxx  Cross_rotation_computer.hpp  Cross_rotation_computer.hxx  LLRs_computer.hpp  LLRs_computer.hxx  LLRs_computer_cross_rot.hpp  LLRs_computer_cross_rot.hxx  LLRs_computer_low_dimensions.hpp  LLRs_computer_low_dimensions.hxx  LLRs_formatter.hpp  LLRs_formatter.hxx  Norms2_computer.hpp  Norms2_computer.hxx  Octonion_operator.hpp  Octonion_operator.hxx  Quantum_channel.hpp  Quantum_channel.hxx  Quaternion_operator.hpp  Quaternion_operator.hxx  Real_operator.hpp  Real_operator.hxx  Rotation_matrices_computer.hpp  Rotation_matrices_computer.hxx  Rotation_vectors_computer.hpp  Rotation_vectors_computer.hxx
include/Module/Decoder/LDPC/: Syndrome_computer.hpp  Syndrome_computer.hxx
include/Module/Decoder/LDPC/SPA/: Decoder_LDPC_BP_flooding_SPA_coset.hpp  Decoder_LDPC_BP_flooding_SPA_coset.hxx
include/Tools/: Helper.hpp
include/Tools/LDPC/: LDPC_build_tools.hpp
include/Tools/Reporter/Noise/: Reporter_noise_CVQKD.hpp
search/: search_index.json
simulation/coding-schemes/: index.html
simulation/combinations/: index.html
simulation/modes/: index.html
simulation/running/: index.html
src/: Create_bsparse_from_cil.cpp  HDirac.cpp
src/Code/: Code_params.cpp  Code_params_LDPC.cpp  Code_params_LDPC_synd_cnct.cpp
src/Examples/: BIAWGNC_coset_pip.cpp  BIAWGNC_coset_seq.cpp  README.md  Virtual_channel_householder_o2_coset_pip.cpp  Virtual_channel_householder_o2_coset_seq.cpp  Virtual_channel_householder_o3_synd_cnct_seq.cpp  Virtual_channel_octonion_coset_seq.cpp
src/Module/: Alice_quantum_generator.cpp  Complex_operator.cpp  Cross_rotation_computer.cpp  LLRs_computer.cpp  LLRs_computer_cross_rot.cpp  LLRs_computer_low_dimensions.cpp  LLRs_formatter.cpp  Norms2_computer.cpp  Octonion_operator.cpp  Quantum_channel.cpp  Quaternion_operator.cpp  Real_operator.cpp  Rotation_matrices_computer.cpp  Rotation_vectors_computer.cpp
src/Module/Decoder/LDPC/: Syndrome_computer.cpp
src/Module/Decoder/LDPC/SPA/: Decoder_LDPC_BP_flooding_SPA_coset.cpp
src/Tools/: Helper.cpp
src/Tools/LDPC/: LDPC_build_tools.cpp
src/Tools/Reporter/Noise/: Reporter_noise_CVQKD.cpp
